--- a/index.html
+++ b/index.html
@@ -18,13 +18,24 @@
           </div>
           <p>初期値：
           <input type="text" id="number" value="1.0">  
-          <div id="panel2">
+          <div>
             <p>許容誤差：<br>
             <button type="button" id="e02" class="eps" >0.0001</button>
             <button type="button" id="e03" class="eps" >0.0000001</button>
             <button type="button" id="e04" class="eps" >0.000000001</button>
             </p>
           </div>
+          <div>
+            <p>関数定義：y=<br>　
+              <input type="text" id="kansu3" value="1" size="1">
+              ＊x³　＋　
+              <input type="text" id="kansu2" value="0" size="1">
+              ＊x²<br>＋
+              <input type="text" id="kansu1" value="1" size="1">
+              ＊x¹　＋　
+              <input type="text" id="kansu0" value="-1" size="1">        
+            </p>
+          </div>  
           <div id="result">
             <div>
               <p>2分法<br>
