--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>solving_cmd</title>
+    <title>Equation_Solving</title>
     <link rel="stylesheet" href="style.css">
     <script src="./js/nibun.js"></script>
     <script src="./js/newton.js"></script>
